--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 </head>
 <body>
-    <button onclick="alo()">Clique Aqui</button>
-</body>
+   <button onclick="alo()">clique aqui</button>
+   <button onclick="escreva()">tabuada</button>
+   <button onclick="escreva()">quadrado</button>
+</body>  
 </html>
+
