--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <script src="estudo.js"></script>
 
 </head>
-<body>
-   <button onclick="alo()">clique aqui</button>
-   <button onclick="escreva()">tabuada</button>
-   <button onclick="escreva()">quadrado</button>
+<body
+
+Valor: <input id="valor" type="text"> <br>
+Taxa de juros: <input id="juros" type="text"> <br>
+<button onclick="total()">Enviar</button>
+
 </body>  
 </html>
+
 
