--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,23 +8,22 @@
     <title>Terceiro Trimestre</title>
     <script src="estudo.js"></script>
 
+    <link rel="stylesheet" href="geral.css">
+
 </head>
 <body>
-   Valor: <input id="Valor" type="text"> <br>
-   Taxa de Juros: <input id="juros" type="text"> <br>
-   <button onclick="total()">Enviar</button>
-
-   <br><br><br><br>
-   <span id="resultado"></span><br><br>
-   Bimestre 01: <input id="b1" type="text"> <br>
-   Bimestre 02: <input id="b2" type="text"> <br>
-   Bimestre 03: <input id="b3" type="text"> <br>
-   Bimestre 04: <input id="b4" type="text"> <br>
-   <button onclick="soma()">Soma Notas</button>
-   <button onclick="media()">media das Notas</button>
-
+    <div class="calculadora">
+        <div class="spResultado">
+           <span id="resultado">Total:0,0</span><br>
+        </div>
+        
+        Capital: <input id="valor" type="text"> <br>
+        Taxa de Juros: <input id="juros" type="text"> <br>
+        Quantidade meses: <input id="meses" type="text"> <br>
+        <button id="btnCalc" onclick="total()">Calcular</button>
+    </div>
+    <div>
+        <span id="mes">Mês a Mês</span>
+    </div>
 </body>
 </html>
-
-
-
